# trading-signals

./: .cursorrules  .env.example  .firebaserc  .gitignore  README.md  config.yaml  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml  requirements.txt  run.sh  trading-goals-firebase-adminsdk-fbsvc-6f8bbd3806.json
.firebase/: hosting.d2Vi.cache
backend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
data/: .gitkeep  backtest_buys.csv  my_positions_id_map.json  universe.csv  universe_state.json
docs/: backend-api.md  bot-logic-and-strategy.md  deploy-api-cloud-run.md  firebase-hosting-setup.md  firestore-collection-migration.md  frontend-angular-architecture.md  frontend-vanilla-parity-checklist.md  ibkr-client-portal-gateway-plan.md  multi-user-my-positions.md  my-positions-collection-migration.md  stock-events-mvp.md  stock-events.md  trading-calendar-nys.md
frontend/: .gitignore  .npmrc  README.md  angular.json  package-lock.json  package.json
scripts/: __init__.py  backfill_my_positions_owner_profiles.py  backfill_universe_latest_symbol_details.py  backtest_buy_signals.py  backtest_recent_signals.py  deploy.sh  deploy_nest_cloud_run.sh  discover_stock_events.py  finnhub_test.py  finviz_screener_poc.py  firebase_firestore_test.py  firestore_copy_collection.py  firestore_delete_collection_docs.py  firestore_promote_my_positions_collections.py  generate_nyse_calendar_data.py  ibkr_cp_gateway_test.py  ibkr_flex_test.py  ibkr_scanner_test.py  migrate_my_positions_collection.py  migrate_signals_old_to_signals.py  (+13 more)
(+212 files in other folders)
